<resources>
    <string name="app_name">Ticket To Ride Score</string>
    <string name="choose_game_edition">Choose game edition:</string>
    <string name="ttr_usa">Ticket to Ride USA (original)</string>
    <string name="ttr_euro">Ticket to Ride Europe</string>
    <string name="choose_player_colours">Choose player colors:</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="start_new_game">Start new game</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="undefined">Undefined</string>
    <string name="routes">Routes</string>
    <string name="tickets">Tickets</string>
    <string name="end_game">End Game</string>
    <string name="ticket_none">No ticket scores added.</string>
    <string name="route_none">No routes scores added.</string>
    <string name="add_route_score">Add route score</string>
    <string name="add_ticket_score">Add ticket score</string>
    <string name="add_remaining_trains">Add Remaining Trains</string>
    <string name="routes_lower">routes\u0020</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="preview_num">10</string>
    <string name="points_preview">(4 points)</string>
    <string name="times">\u0020x\u0020</string>
    <string name="cars_num_preview">3</string>
    <string name="remaining_stations">Remaining stations:</string>
    <string name="remaining_carriages">Remaining carriages:</string>
    <string name="points">points</string>
    <string name="points_ticket">\u0020points ticket</string>
    <string name="has_longest_route">Has longest route?</string>
    <string name="abandon_game">Abandon game</string>
</resources>
