<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.t3hmun.tickettoridescore.ConfigActivity" >
<RelativeLayout
    android:id="@+id/activity_config"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/chooseGameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_game_edition" />
    <RadioGroup
        android:id="@+id/gameOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseGameLabel"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <RadioButton
            style="@style/rel_start_content"
            android:id="@+id/usaOption"
            android:text="@string/ttr_usa"
            android:checked="true" />

        <RadioButton
            style="@style/rel_start_content"
            android:text="@string/ttr_euro"
            android:id="@+id/europeOption"/>
    </RadioGroup>
    <TextView
        android:text="@string/choose_player_colours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameOptions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/playersLabel" />

    <CheckBox
        style="@style/rel_start_content"
        android:text="@string/red"
        android:id="@+id/redCheck"
        android:layout_below="@+id/playersLabel"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <CheckBox
        style="@style/rel_start_content"
        android:text="@string/yellow"
        android:id="@+id/yellowCheck"
        android:layout_below="@+id/redCheck"/>

    <CheckBox
        style="@style/rel_start_content"
        android:text="@string/green"
        android:id="@+id/greenCheck"
        android:layout_below="@+id/yellowCheck"/>

    <CheckBox
        style="@style/rel_start_content"
        android:text="@string/blue"
        android:id="@+id/blueCheck"
        android:layout_below="@+id/greenCheck"/>

    <CheckBox
        style="@style/rel_start_content"
        android:text="@string/black"
        android:id="@+id/blackCheck"
        android:layout_below="@+id/blueCheck"/>

    <Button
        style="@style/rel_start_content"
        android:id="@+id/start_button"
        android:layout_below="@+id/blackCheck"
        android:text="@string/start_new_game"/>


</RelativeLayout>
</ScrollView>